--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ section{
 #cancel{
     border: none;
     border-radius: 10px;
-    padding-bottom: 20%;
+    padding-bottom: 20px;
     color: rgb(70, 70, 199);
     background-color: white;
     font-size: 13px;
