--- a/css/styles.css
+++ b/css/styles.css
@@ -4,24 +4,33 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 
 body{
-    background-image: url("images/pattern-background-desktop.svg");
-    background-size: 50%;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    background-image: url("../images/pattern-background-desktop.svg");
+    background-color: hsl(225, 100%, 94%);
+    opacity: 0.9;
+    
 }
 .container{
-    margin-left: auto;
-    margin-right: auto;
+    margin: 50px auto;
+    max-width: 450px;
+    width: 100%;
     display: block;
     font-family: Red Hat Display, sans-serif;
-    box-sizing: content-box;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .one{
     text-align: center;
     padding: 0px 100px;
 }
+
 h1, #plan { 
     color: hsl(223, 47%, 23%);
-    
 }
 
 .two{
@@ -30,21 +39,21 @@ h1, #plan {
     margin-left: auto;
     margin-right: auto;
     color: hsl(224, 23%, 55%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -1.5%);
 }
+
 #plan{
     font-size: 16px;
+    line-height: 1px;
+    padding-top: 20px;
 }
+
 .price{
     color: hsl(224, 23%, 55%);
 }
-#change{
-    margin-left: 60px;
-    border: none;
-    background-color: inherit;
-    color: hsl(245, 75%, 52%);
-    font-size: 16px;
-    text-decoration: underline;
-}
+
 .center{
     margin-left: auto;
     margin-right: auto;
@@ -52,6 +61,7 @@ h1, #plan {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
 section{
     width: 300px;
     height: 80px;
@@ -67,24 +77,43 @@ section{
     padding-right: 20px;
 }
 
+#change{
+    margin-left: 60px;
+    border: none;
+    background-color: inherit;
+    color: hsl(245, 75%, 52%);
+    font-size: 15px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .btn {
     margin: auto;
     text-align: center;
     border: none;
 }
+
 #pay {
+    border: none;
     border-radius: 10px;
     padding: 15px 90px;
-    font-size: 12px;
+    font-size: 15px;
     color: antiquewhite;
     background-color: hsl(245, 86%, 48%);
-    border: none;
+    box-shadow: 0 8px 20px 0 rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 #cancel{
     border: none;
+    border-radius: 10px;
     padding-bottom: 20%;
     color: rgb(70, 70, 199);
     background-color: white;
+    font-size: 13px;
+    font-weight: 700;
+    cursor: pointer;
 }
+
+
 
