--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,18 @@
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
+@media screen and (max-width: 500px) {
+    .container {
+        margin: 50px auto;
+        max-width: 450px;
+        width: 100%;
+        display: block;
+        font-family: Red Hat Display, sans-serif;
+        background-color: white;
+        border-radius: 20px;
+    }
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -46,6 +58,7 @@ h1, #plan {
 
 #plan{
     font-size: 16px;
+    font-weight: 700;
     line-height: 1px;
     padding-top: 20px;
 }
@@ -60,6 +73,7 @@ h1, #plan {
     display: block;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    width: 100%;
 }
 
 section{
@@ -107,10 +121,10 @@ section{
 #cancel{
     border: none;
     border-radius: 10px;
-    padding-bottom: 20%;
+    padding-bottom: 50px;
     color: rgb(70, 70, 199);
     background-color: white;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 700;
     cursor: pointer;
 }
